Fix width issue for invisible element

--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -11,6 +11,7 @@
     @apply absolute;
     @apply top-0;
     @apply left-0;
+    @apply w-full;
     @apply opacity-0;
     @apply invisible;
     @apply overflow-hidden;
